--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   width: 100vw;
   height: 100vh;
 }
+#viewer canvas {
+  image-rendering: pixelated;
+  transform: translateZ(0);
+}
 
 #time-bar {
   position: absolute;
