--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,10 @@ body {
 #viewer {
   width: 100vw;
   height: 100vh;
+  canvas {
+  image-rendering: pixelated;
+  transform: translateZ(0);
+}
 }
 
 #time-bar {
