--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: "M PLUS 1p", sans-serif;
-  background: #9bbdff;
+  background: #3d3d3d;
 }
 
 #viewer {
